--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>5.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
+
+
         <!-- Телеграмм бот -->
         <dependency>
             <groupId>org.telegram</groupId>
