feat: Roles; JAR build fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 target/
-out/
 Resources/META-INF
 Resources/Temp
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/META-INF
 
 ### IntelliJ IDEA ###
 .idea/
